Fix Tooltip's width on narrow viewports

--- a/packages/circuit-ui/components/Tooltip/Tooltip.module.css
+++ b/packages/circuit-ui/components/Tooltip/Tooltip.module.css
@@ -5,6 +5,9 @@
 
   position: absolute;
   z-index: var(--cui-z-index-tooltip);
+  width: max-content;
+  max-width: 360px;
+  max-width: min(360px, 100vw);
   pointer-events: none;
   opacity: 0;
   transition: opacity var(--cui-transitions-default);
@@ -68,6 +71,18 @@
   padding-right: var(--tooltip-offset);
 }
 
+.content {
+  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
+  font-size: var(--cui-typography-body-two-font-size);
+  font-weight: var(--cui-font-weight-regular);
+  line-height: var(--cui-typography-body-two-line-height);
+  color: var(--cui-fg-normal);
+  background-color: var(--cui-bg-elevated);
+  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
+  border-radius: var(--cui-border-radius-byte);
+  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
+}
+
 .arrow {
   position: absolute;
   width: var(--tooltip-arrow-size);
@@ -100,18 +115,4 @@
   bottom: calc(50% - (var(--tooltip-arrow-size) / 2));
   left: calc(100% - var(--tooltip-offset) - (var(--tooltip-arrow-size) / 2));
   transform: rotate(315deg);
-}
-
-.content {
-  width: max-content;
-  max-width: 360px;
-  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
-  font-size: var(--cui-typography-body-two-font-size);
-  font-weight: var(--cui-font-weight-regular);
-  line-height: var(--cui-typography-body-two-line-height);
-  color: var(--cui-fg-normal);
-  background-color: var(--cui-bg-elevated);
-  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
-  border-radius: var(--cui-border-radius-byte);
-  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
 }
